# paytoy

./: CONSIDERATIONS.md  Cargo.toml  README.md
fixtures/: basic_flow.csv  basic_flow_expected.csv  invalid_format.csv  invalid_record_format.csv
src/: lib.rs  main.rs
tests/: cli_tests.rs
