[package]
name = "paytoy"
version = "0.1.0"
edition = "2024"
authors = [
  "George Hulme <georgehulme2@gmail.com>"
]

[lib]
name = "paytoy_engine"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
rust_decimal = { version = "1.40.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.2.0"
features = "0.10.0"
predicates = "3.1.4"
